--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="story_description">Even the all-powerful Pointing has no control about the
         blind texts it is an almost unorthographic life One day however a small line of blind text by
         the name of Lorem Ipsum decided to leave for the far World of Grammar.</string>
+
+    <!-- Sections -->
+    <string name="section_title">Category Section</string>
 </resources>
