--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,9 @@
     <string name="caption">It is a paradisematic country, in which roasted
         parts of sentences fly into your mouth.</string>
 
-    <!-- Sections -->
+    <!-- Sections Hierarch-->
     <string name="section">Section</string>
+
 
     <!-- System Options Menu -->
     <string name="share">Share</string>
@@ -28,6 +29,10 @@
     <string name="story_description">Even the all-powerful Pointing has no control about the
         blind texts it is an almost unorthographic life One day however a small line of blind text by
         the name of Lorem Ipsum decided to leave for the far World of Grammar.</string>
+
+    <!-- Actions -->
+    <string name="more">More</string>
+
 
     <!-- Main Sections -->
     <string name="section_title">Category Section</string>
